tests/snapshots/run_wpt_conformance__coreml_reduceMin_float16_4D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_min.https.any.js",
    "reduceMin float16 4D tensor default options",
    "coreml",
    "PASS",
)
