tests/snapshots/run_wpt_conformance__coreml_reduceMin_float16_4D_tensor_options_axes_with_options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_min.https.any.js",
    "reduceMin float16 4D tensor options.axes with options.keepDimensions=true",
    "coreml",
    "PASS",
)
